package com.gather.core.sheet;

import com.gather.core.sheet.creator.ISheetCreator;

/**
 * Created with IntelliJ IDEA.
 * $ Project: excelcommons
 * User: rodrigotroy
 * Date: 10/28/13
 * Time: 10:36 AM
 */
public interface ISheetBuilder extends ISheetPopulator,
                                       ISheetCreator {

}
