@startuml

class ExcelBuilder{
    +{method} void createExcel()
}

class DefaultSheetBuilder{
    ..Constructor..
    +DefaultSheetBuilder(ISheetCreator,ISheetPopulator)

    ..Metodos..
    +{method} populate(Sheet sheet)
    +{method} createSheet(Workbook wb) : Sheet
    +{method} getSheet() : Sheet
}

interface IWorkbookCreator {
    {method} getWorkbook() : Workbook
}

interface ISheetBuilder {
}

ExcelBuilder "1" o- "1" IWorkbookCreator
ExcelBuilder "1" o--- "*" ISheetBuilder
ISheetBuilder   <|-- DefaultSheetBuilder

package "com.gather.excelcommons.sheet.populator" {
    interface ISheetPopulator {
        void populate(Sheet sheet)
    }

    ISheetPopulator <|-- ISheetBuilder
    DefaultHeaderSheetPopulator --|> ISheetPopulator
    ISheetPopulator <|-- DefaultBodySheetPopulator
}

package "com.gather.excelcommons.sheet.creator" {
    interface ISheetCreator {
        {method} createSheet(Workbook wb) : Sheet
        {method} getSheet() : Sheet
    }

    ISheetCreator   <|-- ISheetBuilder
    ISheetCreator   <|-- DefaultSheetCreator
}


@enduml